# clawops

./: .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  PRD.md  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
agents/briefer/: AGENTS.md  SOUL.md
agents/commander/: AGENTS.md  SOUL.md
agents/forge/: AGENTS.md  SOUL.md
agents/guardian/: AGENTS.md  SOUL.md
agents/ledger/: AGENTS.md  SOUL.md
agents/triage/: AGENTS.md  SOUL.md
crates/claw-audit/: Cargo.toml
crates/claw-audit/src/: lib.rs
crates/claw-auth/: Cargo.toml
crates/claw-auth/src/: lib.rs
crates/claw-bench/: Cargo.toml
crates/claw-bench/benches/: benchmarks.rs
crates/claw-briefer/: Cargo.toml
crates/claw-briefer/src/: lib.rs
crates/claw-commander/: Cargo.toml
crates/claw-commander/src/: lib.rs
crates/claw-config/: Cargo.toml
crates/claw-config/src/: lib.rs
crates/claw-health/: Cargo.toml
crates/claw-health/src/: lib.rs
crates/claw-identity/: Cargo.toml
crates/claw-identity/src/: lib.rs
crates/claw-ledger/: Cargo.toml
crates/claw-ledger/src/: lib.rs
crates/claw-metrics/: Cargo.toml
crates/claw-metrics/src/: lib.rs
crates/claw-observe/: Cargo.toml
crates/claw-observe/src/: lib.rs
crates/claw-persist/: Cargo.toml
crates/claw-persist/src/: lib.rs
crates/claw-proto/: Cargo.toml
crates/claw-proto/src/: lib.rs
crates/claw-provision/: Cargo.toml
crates/claw-provision/src/: lib.rs
crates/claw-secrets/: Cargo.toml
crates/claw-secrets/src/: lib.rs
crates/claw-triage/: Cargo.toml
crates/claw-triage/src/: lib.rs
crates/clawnode/: Cargo.toml
crates/clawnode/src/: auth_cmd.rs  client.rs  commands.rs  config.rs  config_cmd.rs  error.rs  health_cmd.rs  hetzner_cmd.rs  identity.rs  lib.rs  main.rs  persist.rs  rolling_push.rs  secrets_cmd.rs  vps_cmd.rs
crates/clawops-tests/: Cargo.toml
crates/clawops-tests/src/: lib.rs
crates/clawops-tests/tests/: integration.rs  safety_tests.rs
deploy/: clawnode.service  install.sh
deploy/configs/: gw-01.json  gw-02.json  morpheus.json  oracle.json
deploy/scripts/: health-check.sh  install.sh
deploy/systemd/: clawops-node.service
gf-audit/: Cargo.toml
gf-audit/src/: lib.rs
gf-clawnode/: Cargo.toml
gf-clawnode/src/: main.rs
gf-failover/: Cargo.toml
gf-failover/src/: lib.rs
gf-health/: Cargo.toml
gf-health/src/: lib.rs
gf-metrics/: Cargo.toml
gf-metrics/src/: lib.rs
gf-node-proto/: Cargo.toml
gf-node-proto/src/: lib.rs
gf-provision/: Cargo.toml
gf-provision/src/: lib.rs
plugin/: package.json  plugin.json
plugin/openclaw-clawops/: package-lock.json  tsconfig.json
plugin/openclaw-clawops/src/tools/: audit-log.ts  bulk-restart.ts  incident-report.ts  instance-health.ts  pair-status.ts  provider-health.ts  teardown.ts
plugin/src/: index.ts
plugin/src/services/: health-monitor.ts
plugin/src/tools/: config-push.ts  cost-report.ts  fleet-status.ts  provision.ts  tier-resize.ts
skills/auto-heal/: SKILL.md
skills/capacity-planning/: SKILL.md
skills/clawops/: SKILL.md
skills/config-push/: SKILL.md
skills/cost-analysis/: SKILL.md
skills/failover/: SKILL.md
skills/gateway-manager/: SKILL.md
skills/incident-response/: SKILL.md
skills/instance-diagnose/: SKILL.md
skills/provider-health/: SKILL.md
skills/provision/: SKILL.md
skills/security-audit/: SKILL.md
skills/vps-fleet/: SKILL.md
