[workspace]
members = [
    "gf-clawnode",
    "gf-node-proto",
    "gf-provision",
    "gf-health",
    "gf-failover",
    "gf-metrics",
    "gf-audit",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["RedClaw Systems LLC <ops@redclaw.systems>"]
license = "MIT"
repository = "https://github.com/redclaw/clawops"
rust-version = "1.93"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Protobuf / gRPC
prost = "0.13"
tonic = "0.12"
prost-types = "0.13"

# IDs and time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Async traits
async-trait = "0.1"

# Crypto / security
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Config
config = "0.14"
dotenvy = "0.15"

# CLI (for gf-clawnode)
clap = { version = "4", features = ["derive", "env"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true
