[workspace]
members = [
    "crates/clawnode",
    "crates/claw-proto",
    "crates/claw-persist",
    "crates/claw-identity",
    "crates/claw-secrets",
    "crates/claw-auth",
    "crates/claw-config",
    "crates/claw-metrics",
    "crates/claw-health",
    "crates/claw-provision",
    "crates/claw-audit",
    "crates/clawops-tests",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["RedClaw Systems LLC <ops@redclaw.systems>"]
license = "MIT"
repository = "https://github.com/redclaw/clawops"
rust-version = "1.93"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1"
thiserror = "2.0"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# IDs and time
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Async traits
async-trait = "0.1"

# Crypto / security
sha2 = "0.10"
hex = "0.4"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Concurrency
parking_lot = "0.12"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true
