[package]
name = "gf-audit"
description = "Immutable audit trail logging for all agent actions across the fleet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true

gf-node-proto = { path = "../gf-node-proto" }
