[package]
name = "gf-clawnode"
description = "GatewayForge instance-side agent — runs on each VPS, connects to ClawOps gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "gf-clawnode"
path = "src/main.rs"

[dependencies]
# Workspace
tokio.workspace = true
tokio-tungstenite.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
clap.workspace = true
dotenvy.workspace = true

# Local crates
gf-node-proto = { path = "../gf-node-proto" }
gf-health = { path = "../gf-health" }
gf-metrics = { path = "../gf-metrics" }
gf-audit = { path = "../gf-audit" }

# System / process
sysinfo = "0.32"
bollard = "0.17"          # Docker API client
ssh2 = "0.9"
