[package]
name = "gf-failover"
description = "Primary/standby failover orchestration for user VPS gateway pairs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
futures.workspace = true

gf-node-proto = { path = "../gf-node-proto" }
gf-health = { path = "../gf-health" }
gf-audit = { path = "../gf-audit" }
