[package]
name = "gf-health"
description = "Fleet health checking and auto-heal orchestration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
futures.workspace = true

gf-node-proto = { path = "../gf-node-proto" }
gf-audit = { path = "../gf-audit" }
