[package]
name = "gf-node-proto"
description = "Protobuf definitions and generated types for the GatewayForge VPS node protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
prost.workspace = true
prost-types.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true

[build-dependencies]
# Uncomment when .proto files are added under proto/
# prost-build = "0.13"
# tonic-build = "0.12"
