[package]
name = "claw-audit"
version.workspace = true
edition.workspace = true
description = "Immutable append-only audit trail with chain hashing for ClawOps"
license.workspace = true
repository.workspace = true

[dependencies]
claw-persist = { path = "../claw-persist" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
thiserror = "2.0"
tracing = "0.1"
async-trait = "0.1"
tokio = { version = "1.43", features = ["full"] }

[dev-dependencies]
tempfile = "3.14"

[lints]
workspace = true
