[package]
name = "claw-briefer"
version.workspace = true
edition.workspace = true
description = "Scheduled fleet briefing and report generation for the Briefer agent"
license.workspace = true
repository.workspace = true

[dependencies]
claw-proto = { path = "../claw-proto" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[lints]
workspace = true
