[package]
name = "claw-health"
version.workspace = true
edition.workspace = true
description = "Fleet health scoring, auto-heal engine, and failover orchestration for ClawOps"
license.workspace = true
repository.workspace = true

[dependencies]
claw-proto = { path = "../claw-proto" }
claw-audit = { path = "../claw-audit" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
async-trait = "0.1"
tokio = { version = "1.43", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

[dev-dependencies]
tempfile = "3.14"
tokio = { version = "1.43", features = ["full"] }

[lints]
workspace = true
