[package]
name = "claw-identity"
version.workspace = true
edition.workspace = true
description = "Ed25519 device identity, signing, and challenge-response authentication for ClawOps"
license.workspace = true
repository.workspace = true

[dependencies]
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.14"

[lints]
workspace = true
