[package]
name = "claw-ledger"
version.workspace = true
edition.workspace = true
description = "Cost analysis engine, waste detection, and optimization recommendations for ClawOps"
license.workspace = true
repository.workspace = true

[dependencies]
claw-proto = { path = "../claw-proto" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[lints]
workspace = true
