[package]
name = "claw-metrics"
version.workspace = true
edition.workspace = true
description = "VPS fleet metrics collection for ClawOps"
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3.14"

[lints]
workspace = true
