[package]
name = "claw-observe"
version.workspace = true
edition.workspace = true
description = "Structured observability: metrics counters, Prometheus export, and audit logging for ClawOps"
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
parking_lot = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
