[package]
name = "claw-persist"
version.workspace = true
edition.workspace = true
description = "JSON file-backed persistence for ClawOps node state"
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.14"

[lints]
workspace = true
