[package]
name = "claw-provision"
version.workspace = true
edition.workspace = true
description = "Multi-provider VPS provisioning for ClawOps (Hetzner, Vultr, Contabo, Hostinger, DigitalOcean)"
license.workspace = true
repository.workspace = true

[dependencies]
claw-proto = { path = "../claw-proto" }
claw-audit = { path = "../claw-audit" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
async-trait = "0.1"
tokio = { version = "1.43", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

[features]
# Run integration tests against live Hetzner API (requires HETZNER_API_TOKEN env var)
integration = []

[dev-dependencies]
tempfile = "3.14"
tokio = { version = "1.43", features = ["full"] }

[lints]
workspace = true
