[package]
name = "claw-triage"
version.workspace = true
edition.workspace = true
description = "Incident management, severity classification, and structured incident reporting"
license.workspace = true
repository.workspace = true

[dependencies]
claw-proto = { path = "../claw-proto" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

[lints]
workspace = true
